# sana

./: .gitignore  App.tsx  Makefile  README.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js
app/: .dockerignore  .prettierignore  App.tsx  Dockerfile  Makefile  README.md  app.json  cesconfig.jsonc  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/src/auth/: session.ts  storage.ts
app/src/chat/: ChatListScreen.tsx  ChatScreen.tsx  storage.ts  types.ts
app/src/components/ui/: avatar.tsx  badge.tsx  dropdown-menu.tsx  icon.tsx  label.tsx  menubar.tsx  native-only-animated-view.tsx  popover.tsx  progress.tsx  select.tsx  separator.tsx  switch.tsx  toggle-group.tsx
components/: EditScreenInfo.tsx  ScreenContent.tsx
scraper/: .gitignore  Makefile  README.md  pyproject.toml
scraper/src/scraper/: __init__.py  __main__.py  corpus.py  europepmc.py  http.py  models.py  pmc_oa.py
scraper/tests/: test_corpus.py  test_europepmc.py  test_pmc_oa.py
server/: Dockerfile  Makefile  README.md  deploy.yaml
src/auth/: download.ts  key.test.ts  key.ts  session.ts  storage.ts
src/chat/: ChatListScreen.tsx  ChatScreen.tsx  Main.tsx  storage.test.ts  storage.ts  types.ts  useChats.ts
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  button.tsx  card.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  hover-card.tsx  input.tsx  radio-group.tsx  tabs.tsx  text.tsx  textarea.tsx  toggle.tsx  tooltip.tsx
